compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__ambiguous_import_error_no_unqualified.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        import foo/sub\n        import foo2/sub\n        pub fn main() {\n            sub.bar()\n        }\n        "
---
error: Duplicate import
  ┌─ /src/one/two.gleam:2:9
  │
2 │         import foo/sub
  │         ^^^^^^^^^^^^^^ First imported here
3 │         import foo2/sub
  │         ^^^^^^^^^^^^^^^ Reimported here

sub has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

